<resources>
    <string name="app_name">My Application1.1</string>
    <string name="welcome_back"><b>WELCOME BACK</b></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account_sign_up">Dont have an account?<u> Sign Up</u></string>
    <string name="full_name">Full Name</string>
    <string name="emailaddress">EmailAddress</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="details">details</string>
    <string name="login"><u>Login</u></string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Welcome to search</string>
    <string name="cart">Cart</string>
    <string name="notes">Notes</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="bathroom">Bathroom</string>
</resources>